fixed overflow issue if to many evolution chain

--- a/src/components/Apps/PokemonSearch/PokemonSearch.css
+++ b/src/components/Apps/PokemonSearch/PokemonSearch.css
@@ -158,6 +158,7 @@
 
 .evolution-stages {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
 }
